force-app/main/default/objects/Project__c.object
<CustomObject>
    <description>Imhotep App Builder project</description>
    <fields>
        <fullName>Default_Release_Mode__c</fullName>
        <defaultValue>&quot;Standard&quot;</defaultValue>
        <description>Default setting for controlling the features and layout enabled for this project&apos;s related releases and stories.  Default is Standard (all Imhotep features enabled).  Individual releases and stories can override this selection.  Changes to this selection do not effect existing releases and stories.</description>
        <inlineHelpText>Default setting for controlling the features and layout enabled for this project&apos;s related releases and stories.  Default is Standard (all Imhotep features enabled).  Individual releases and stories can override this selection.  Changes to this selection do not effect existing releases and stories.</inlineHelpText>
        <label>Default Release Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Release_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Count__c</fullName>
        <label>Release Count</label>
        <summaryForeignKey>Release__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resource_Link_Count__c</fullName>
        <description>Controls the visibility of the imhotepResourceBar LWC on record pages.</description>
        <inlineHelpText>Controls the visibility of the imhotepResourceBar LWC on record pages.</inlineHelpText>
        <label>Resource Link Count</label>
        <summaryForeignKey>Resource_Link__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Build</fullName>
                </value>
                <value>
                    <fullName>Demo Component Build</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>ISV Build</fullName>
                </value>
                <value>
                    <fullName>Org Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Builder_Read_Write__c</fullName>
        <label>Builder Read/Write</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Owner_Lead_Read_Write__c</fullName>
        <label>Owner/Lead Read/Write</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Viewer_Read_Only__c</fullName>
        <label>Viewer Read Only</label>
    </sharingReasons>
</CustomObject>